# model-council-mcp-server

./: CLAUDE.md  README.md  fastmcp.json  pyproject.toml  server.json
model_council_mcp_server/: __init__.py  config.py  polza_client.py  server.py
tests/: test_model_council.py
