[project]
name = "model-council-mcp-server"
version = "0.1.0"
description = "MCP server that returns Grok, Gemini, and DeepSeek outputs for Claude to summarize"
authors = [
    { name = "Ivan Khokholkov" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["mcp", "fastmcp", "grok", "gemini", "deepseek", "claude", "comparison"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastmcp>=2.11.0",
    "httpx>=0.28.1",
    "pydantic>=2.8.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.5",
]

[project.scripts]
model-council-mcp-server = "model_council_mcp_server.server:main"

[project.entry-points.fastmcp]
model-council-mcp-server = "model_council_mcp_server.server:create_app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["model_council_mcp_server"]
